--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <div class="row">
                     <div class="col-md-12">
                         <ul class="menu">
-                            <li><a href="#"> Home </a></li>
-                            <li><a href="#"> about </a></li>
+                            <li><a href="index.html"> Home </a></li>
+                            <li><a href="page-about-us.html"> about </a></li>
                             <li><a href="#"> services </a></li>
                             <li><a href="#"> news </a></li>
                             <li><a href="#"> staff </a></li>
@@ -463,7 +463,7 @@
         </div>
     </section>
 
-    <section class="book-appointment p-t-50 p-b-50 bg-light-blue text-center">
+    <section class="book-appointment p-t-50 p-b-50 bg-light-blue-2 text-center">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -494,7 +494,7 @@
                                 <h5 class="footer-title b-s-30">Site links</h5>
                                 <ul class="footer-menu">
                                     <li> <a href="#"> Home </a> </li>
-                                    <li> <a href="#"> About Us </a> </li>
+                                    <li> <a href="page-about-us.html"> About Us </a> </li>
                                     <li> <a href="#"> Services </a> </li>
                                     <li> <a href="#"> News </a> </li>
                                     <li> <a href="#"> Staff </a> </li>
@@ -548,7 +548,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-12">
-                        <p>© Copyright 2022 Granada Medical. All Rights Reserved. Site by <a href="#" target="_blank">
+                        <p>© Copyright 2022 Granada Medical. All Rights Reserved. Site by <a href="https://infoconnect.com.au/" target="_blank">
                             Infoconnect </a></p>
                     </div>
                 </div>
