--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <ul class="menu">
                             <li><a href="index.html"> Home </a></li>
                             <li><a href="page-about-us.html"> about </a></li>
-                            <li><a href="#"> services </a></li>
+                            <li><a href="page-services.html"> services </a></li>
                             <li><a href="#"> news </a></li>
                             <li><a href="#"> staff </a></li>
                             <li><a href="#"> resources </a></li>
@@ -227,86 +227,86 @@
             </div>
             <div class="row">
                 <div class="col-md-6">
-                    <div class="service-box orange text-center b-s-50">
+                    <div class="home-service-box orange text-center b-s-50">
                         <div class="service-icon-container">
                             <img src="img/service-icon-1.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-30">Women's Health</h4>
+                        <h4 class="home-service-box-title b-s-30">Women's Health</h4>
                         <p>Women need to have regular health checks and it is important that you see your doctor for
                             regular health check-ups to help you stay healthy and to pick up early warning signs of
                             diseases or illnesses.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="service-box blue text-center b-s-50">
+                    <div class="home-service-box blue text-center b-s-50">
                         <div class="service-icon-container">
                             <img src="img/service-icon-2.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-30">Men's Health</h4>
+                        <h4 class="home-service-box-title b-s-30">Men's Health</h4>
                         <p>The life expectancy of Australia men is 79 years which is 5 years less than women. Men are
                             probably not as careful as women when it comes to their health.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="service-box blue text-center b-s-50">
+                    <div class="home-service-box blue text-center b-s-50">
                         <div class="service-icon-container">
                             <img src="img/service-icon-3.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-10">Child and <br/>Adolescent Health</h4>
+                        <h4 class="home-service-box-title b-s-10">Child and <br/>Adolescent Health</h4>
                         <p>Nothing could be more worrying than your child getting sick! Kids can become easily sick with
                             the common cold, diarrhoea, vomiting and many other nonspecific viral illnesses.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="service-box blue text-center b-s-50">
+                    <div class="home-service-box blue text-center b-s-50">
                         <div class="service-icon-container">
                             <img src="img/service-icon-4.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-30">Immunisation</h4>
+                        <h4 class="home-service-box-title b-s-30">Immunisation</h4>
                         <p>Immunisation is a simple, safe and effective way of protecting people against harmful
                             diseases
                             before they come into contact with them in the community.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="service-box blue text-center b-s-50">
+                    <div class="home-service-box blue text-center b-s-50">
                         <div class="service-icon-container">
                             <img src="img/service-icon-5.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-30">Minor Procedures</h4>
+                        <h4 class="home-service-box-title b-s-30">Minor Procedures</h4>
                         <p>Our GPs are competent in basic assessment and diagnosis of common skin cancers using
                             dermatosope.They might offer you to have skin biopsy to verify the diagnosis and will offer
                             further treatment.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="service-box blue text-center b-s-50">
+                    <div class="home-service-box blue text-center b-s-50">
                         <div class="service-icon-container">
                             <img src="img/service-icon-6.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-30">Investigations</h4>
+                        <h4 class="home-service-box-title b-s-30">Investigations</h4>
                         <p>Pathology and other tests have an essential role in the diagnosis and screening for disease
                             in medical practice. We provide wide range of investigation facilities within the
                             premise.</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="service-box blue text-center">
+                    <div class="home-service-box blue text-center">
                         <div class="service-icon-container">
                             <img src="img/service-icon-7.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-30">Health Checks</h4>
+                        <h4 class="home-service-box-title b-s-30">Health Checks</h4>
                         <p>A health check is an examination of your current state of health. As we get older, many of us
                             3become more vulnerable to illness. In order to reduce this risk, a number of health checks
                             or screening tests are recommended...</p>
                     </div>
                 </div>
                 <div class="col-md-6">
-                    <div class="service-box blue text-center">
+                    <div class="home-service-box blue text-center">
                         <div class="service-icon-container">
                             <img src="img/service-icon-8.png"/>
                         </div>
-                        <h4 class="service-box-title b-s-10">Chronic Disease<br/>Management</h4>
+                        <h4 class="home-service-box-title b-s-10">Chronic Disease<br/>Management</h4>
                         <p>Chronic diseases are illnesses that are prolonged in duration, do not often resolve
                             spontaneously, and are rarely cured completely.</p>
                     </div>
@@ -493,9 +493,9 @@
                             <div class="col-md-6">
                                 <h5 class="footer-title b-s-30">Site links</h5>
                                 <ul class="footer-menu">
-                                    <li> <a href="#"> Home </a> </li>
+                                    <li> <a href="index.html"> Home </a> </li>
                                     <li> <a href="page-about-us.html"> About Us </a> </li>
-                                    <li> <a href="#"> Services </a> </li>
+                                    <li> <a href="page-services.html"> Services </a> </li>
                                     <li> <a href="#"> News </a> </li>
                                     <li> <a href="#"> Staff </a> </li>
                                     <li> <a href="#"> Resources </a> </li>
