--- a/page-services.html
+++ b/page-services.html
@@ -80,66 +80,223 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h2>About Us</h2>
+                    <h2>Services</h2>
                     <div class="breadcrumb color-light-blue">
-                        Home >> About Us
+                        Home >> Services
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="about-us p-t-80 p-b-80">
+    <section class="services p-t-80 p-b-80">
         <div class="container">
             <div class="row">
-                <div class="col-md-7">
-                    <div class="about-us-left">
-                        <h2 class="b-s-10 color-light-blue">About Granada Medical Practice</h2>
-                        <p class="b-s-30">Granada Medical is situated in Maddington, Western Australia. Our practice
-                            is located
-                            approximately 13 kilometres away from Perth CBD. We are a predominately bulk billing
-                            general
-                            practice but a gap fee may apply for some procedures. You will be informed of any gap
-                            fee at
-                            the time of booking or prior to the consultation.</p>
-
-                        <p class="b-s-40"> We provide a wide range of general practice services to the community and
-                            our staff are
-                            dedicated to provide quality care in a friendly and welcoming environment.</p>
-                        <div class="detail-box-container b-s-50">
-                            <div class="detail-box text-center">
-                                <div class="detail-box-content">
-                                    <h2 class="color-light-blue">10+</h2>
-                                    <p>Years of <br/> Excellence</p>
-                                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-women-health.jpg" alt="img-women-health" title="Women's Health"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Family Medicine</p>
+                                <h6>Women's Health</h6>
                             </div>
-                            <div class="detail-box text-center">
-                                <div class="detail-box-content">
-                                    <h2 class="color-light-blue">07</h2>
-                                    <p>Full-time <br/> Doctors</p>
-                                </div>
-                            </div>
-                            <div class="detail-box text-center">
-                                <div class="detail-box-content">
-                                    <h2 class="color-light-blue">03</h2>
-                                    <p>Part-time <br/> Doctors</p>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="about-us-img-container">
-                            <img src="img/AGPAL-logo.jpg" alt="AGPAL-logo"
-                                 title="AGPAL | Australian General Practice Accreditation Limited"/>
-                            <img src="img/WAGPET-logo.jpg" alt="WAGPET-logo"
-                                 title="WA General Practice Education & Training"/>
-                            <div class="clearfix"></div>
-                        </div>
+                        </a>
                     </div>
                 </div>
-                <div class="col-md-5">
-                    <div class="about-us-right">
-                        <img src="img/img-about-us-page.jpg" alt="about-us-image"
-                             title="About Granada Medical Practice"/>
-                        <div class="clearfix"></div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-men-health.jpg" alt="img-men-health" title="Men’s Health"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Family Medicine</p>
+                                <h6>Men’s Health</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-child.jpg" alt="img-child-health"
+                             title="Child and Adolescent Health"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Family Medicine</p>
+                                <h6>Child and Adolescent Health</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-immunisation.jpg" alt="img-immunisation" title="Immunisation"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Family Medicine</p>
+                                <h6>Immunisation</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-antenatal-shared-care.jpg" alt="img-antenatal-shared-care"
+                             title="Antenatal Shared Care"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Family Medicine</p>
+                                <h6>Antenatal Shared Care</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-ecg.jpg" alt="img-ecg" title="ECG"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Investigations</p>
+                                <h6>ECG</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-lung-function.jpg" alt="img-ecg-lung-function"
+                             title="Lung Function / Spirometry"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Investigations</p>
+                                <h6>Lung Function / Spirometry</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-pathology.jpg" alt="img-service-pathology" title="Pathology"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Investigations</p>
+                                <h6>Pathology</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-pap-smears.jpg" alt="img-service-pap-smears" title="Pap Smears"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <!--<p>Investigations</p>-->
+                                <h6>Pap Smears</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-aboriginal-health.jpg" alt="img-service-aboriginal-health"
+                             title="Aboriginal Health"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Health Checks</p>
+                                <h6>Aboriginal Health</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-old-health-check.jpg" alt="img-service-old-health-check"
+                             title="45-49 Year Old Health Check"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Health Checks</p>
+                                <h6>45-49 Year Old Health Check</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-75-years-plus-health-check.jpg"
+                             alt="img-service-75-years-plus-health-check" title="75 Years Plus Health Check"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Health Checks</p>
+                                <h6>75 Years Plus Health Check</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-minor-procedures.jpg"
+                             alt="img-service-minor-procedures" title="Minor Procedures"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <h6>Minor Procedures</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-chronic-disease-management.jpg"
+                             alt="img-service-chronic-disease-management" title="Chronic Disease Management"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <h6>Chronic Disease Management</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center b-s-50">
+                        <img src="img/img-service-travel-medicine.jpg"
+                             alt="img-service-travel-medicine" title="Travel Medicine"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <h6>Travel Medicine</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center">
+                        <img src="img/img-service-podiatry.jpg"
+                             alt="img-service-podiatry" title="Podiatry"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Allied Health Services</p>
+                                <h6>Podiatry</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center">
+                        <img src="img/img-service-physiotherapy.jpg"
+                             alt="img-service-physiotherapy" title="Physiotherapy"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Allied Health Services</p>
+                                <h6>Physiotherapy</h6>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="service-box text-center">
+                        <img src="img/img-service-psychologist.jpg"
+                             alt="img-service-psychologist" title="Psychologist"/>
+                        <a href="#" class="service-box-desc bg-light-blue">
+                            <div class="service-box-desc-content">
+                                <p>Allied Health Services</p>
+                                <h6>Psychologist</h6>
+                            </div>
+                        </a>
                     </div>
                 </div>
             </div>
