service single page

--- a/page-services.html
+++ b/page-services.html
@@ -95,7 +95,7 @@
                 <div class="col-md-4">
                     <div class="service-box text-center b-s-50">
                         <img src="img/img-service-women-health.jpg" alt="img-women-health" title="Women's Health"/>
-                        <a href="#" class="service-box-desc bg-light-blue">
+                        <a href="page-service-single.html" class="service-box-desc bg-light-blue">
                             <div class="service-box-desc-content">
                                 <p>Family Medicine</p>
                                 <h6>Women's Health</h6>
@@ -106,7 +106,7 @@
                 <div class="col-md-4">
                     <div class="service-box text-center b-s-50">
                         <img src="img/img-service-men-health.jpg" alt="img-men-health" title="Men’s Health"/>
-                        <a href="#" class="service-box-desc bg-light-blue">
+                        <a href="page-service-single.html" class="service-box-desc bg-light-blue">
                             <div class="service-box-desc-content">
                                 <p>Family Medicine</p>
                                 <h6>Men’s Health</h6>
